--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "csv": "^5.3.2",
+    "csvtojson": "^2.0.10",
+    "d3": "^5.16.0",
+    "papaparse": "^5.2.0",
     "react": "^16.13.1",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
