--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "csv": "^5.3.2",
     "csvtojson": "^2.0.10",
     "d3": "^5.16.0",
+    "netlify-cli": "^2.54.0",
     "papaparse": "^5.2.0",
     "react": "^16.13.1",
     "react-d3-library": "^1.1.8",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install && npm run build to CI=false&&npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
