--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install && npm run build to CI=false&&npm install && npm run build",
+    "build": "CI =false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
